# future-dynamics

./: .gitignore  .pdm-python  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
analysis/.evidence/customization/: .profile.json
analysis/sources/needful_things/: connection.yaml
dbt_project/: dbt_project.yml
experiments/: analysis.ipynb  analysis_script.py  dagster_utils.ipynb  hotel_prices_input.txt  quality_check.ipynb
future_dynamics_transformations/: dbt_project.yml
future_dynamics_transformations/reports/.evidence/customization/: .profile.json
future_dynamics_transformations/reports/pages/: index.md
future_dynamics_transformations/reports/sources/needful_things/: connection.yaml
opensource_mds/: __init__.py  assets.py  constants.py  google_hotel_prices.py  myconfig.py  openai_callls.py  proxy_list.py  resources.py  test_gha.py
pipelines/: __init__.py  jobs.py  partitions.py  test_gha.py
pipelines/assets/: __init__.py
pipelines/assets/events/: assets.py
pipelines/assets/google_hotel_ads/: assets.py  scraper.py
pipelines/resources/: __init__.py
