[project]
name = "future-dynamics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nehil Jain", email = "2761999+nehiljain@users.noreply.github.com"},
]
dependencies = [
    "dagster",
    "dagster-dbt",
    "dagster-duckdb",
    "dagster-duckdb-pandas",
    "playwright>=1.41.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.1",
    "localstack>=3.0.2",
    "gspread>=5.12.4",
    "duckdb>=0.9.2",
    "dbt-core>=1.7.5",
    "jupyterlab>=4.0.11",
    "nordvpn-switcher>=0.3.0",
    "dbt-duckdb>=1.7.1",
    "seaborn>=0.13.2",
    "plotly>=5.18.0",
    "pygwalker>=0.4.4",
    "supabase>=2.3.5",
    "todoist-api-python>=2.1.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.dagster]
module_name = "opensource_mds"
